--- a/index.html
+++ b/index.html
@@ -1,14 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Política de Privacidade</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Montserrat', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #f0f4f8, #d9e2ec);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      color: #333;
+      animation: fadeIn 1s ease-in-out;
+    }
+
+    .container {
+      background: #fff;
+      padding: 2rem;
+      border-radius: 16px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      max-width: 600px;
+      width: 90%;
+      animation: slideUp 0.8s ease-in-out;
+    }
+
+    h1 {
+      font-size: 1.8rem;
+      color: #2a7de1;
+      margin-bottom: 1rem;
+      text-align: center;
+    }
+
+    p {
+      line-height: 1.6;
+      margin-bottom: 1rem;
+    }
+
+    a {
+      color: #2a7de1;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @keyframes slideUp {
+      from { transform: translateY(20px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+
+    footer {
+      margin-top: 2rem;
+      font-size: 0.9rem;
+      text-align: center;
+      color: #666;
+    }
+  </style>
 </head>
 <body>
-  <h1>Política de Privacidade</h1>
-  
-  <p>Este aplicativo não coleta, armazena nem compartilha dados pessoais dos usuários.</p>
-  <p>Todos os dados são armazenados localmente no dispositivo e não são enviados a servidores externos.</p>
-  <p>Para dúvidas, entre em contato pelo email: seuemail@exemplo.com</p>
+  <div class="container">
+    <h1>Política de Privacidade</h1>
+    <p>Este aplicativo não coleta, armazena nem compartilha dados pessoais dos usuários.</p>
+    <p>Todos os dados são armazenados localmente no dispositivo e não são enviados a servidores externos.</p>
+    <p>Em caso de dúvidas, entre em contato pelo e-mail: <a href="mailto:ivansodre51@gmail.com">ivansodre51@gmail.com</a></p>
+    <footer>
+      &copy; 2025 Gestor de Vendas - PDV Completo. Todos os direitos reservados.
+    </footer>
+  </div>
 </body>
 </html>
