--- a/index.html
+++ b/index.html
@@ -2,81 +2,55 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <title>Política de Privacidade - Gestor de Vendas - PDV Completo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Política de Privacidade</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Montserrat', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(135deg, #f0f4f8, #d9e2ec);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      color: #333;
-      animation: fadeIn 1s ease-in-out;
-    }
-
-    .container {
-      background: #fff;
-      padding: 2rem;
-      border-radius: 16px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      max-width: 600px;
-      width: 90%;
-      animation: slideUp 0.8s ease-in-out;
-    }
-
-    h1 {
-      font-size: 1.8rem;
-      color: #2a7de1;
-      margin-bottom: 1rem;
-      text-align: center;
-    }
-
-    p {
-      line-height: 1.6;
-      margin-bottom: 1rem;
-    }
-
-    a {
-      color: #2a7de1;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-
-    @keyframes slideUp {
-      from { transform: translateY(20px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
-    }
-
-    footer {
-      margin-top: 2rem;
-      font-size: 0.9rem;
-      text-align: center;
-      color: #666;
-    }
+    body { font-family: Arial, sans-serif; margin: 2em; color: #222; background: #fff; }
+    h1, h2 { color: #2a5d84; }
+    a { color: #2a5d84; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Política de Privacidade</h1>
-    <p>Este aplicativo não coleta, armazena nem compartilha dados pessoais dos usuários.</p>
-    <p>Todos os dados são armazenados localmente no dispositivo e não são enviados a servidores externos.</p>
-    <p>Em caso de dúvidas, entre em contato pelo e-mail: <a href="mailto:ivansodre51@gmail.com">ivansodre51@gmail.com</a></p>
-    <footer>
-      &copy; 2025 Gestor de Vendas - PDV Completo. Todos os direitos reservados.
-    </footer>
-  </div>
+  <h1>Política de Privacidade</h1>
+  <p>Esta Política de Privacidade descreve como o aplicativo <strong>App de Vendas</strong> coleta, usa, armazena e protege as informações dos usuários.</p>
+
+  <h2>1. Coleta de Informações</h2>
+  <p>O aplicativo pode coletar as seguintes informações:</p>
+  <ul>
+    <li>Dados cadastrais de clientes (nome, telefone, endereço, e-mail);</li>
+    <li>Informações de vendas, produtos e transações financeiras;</li>
+    <li>Dados de uso do aplicativo para fins de melhoria e suporte;</li>
+    <li>Informações fornecidas voluntariamente pelo usuário.</li>
+  </ul>
+  <p><strong>O aplicativo não coleta dados sensíveis, localização em tempo real, fotos, áudios ou arquivos pessoais do dispositivo.</strong></p>
+
+  <h2>2. Uso das Informações</h2>
+  <p>As informações coletadas são utilizadas para:</p>
+  <ul>
+    <li>Gerenciar vendas, clientes e transações;</li>
+    <li>Emitir relatórios financeiros e de caixa;</li>
+    <li>Melhorar a experiência do usuário e o funcionamento do app;</li>
+    <li>Atender solicitações de suporte e contato.</li>
+  </ul>
+
+  <h2>3. Compartilhamento de Dados</h2>
+  <p>Os dados dos usuários <strong>não são compartilhados com terceiros</strong>, exceto quando exigido por lei ou mediante consentimento expresso do usuário.</p>
+
+  <h2>4. Armazenamento e Segurança</h2>
+  <p>As informações são armazenadas localmente no dispositivo do usuário e/ou em servidores seguros, quando aplicável. São adotadas medidas técnicas para proteger os dados contra acesso não autorizado, alteração ou divulgação.</p>
+
+  <h2>5. Direitos do Usuário</h2>
+  <p>O usuário pode, a qualquer momento, solicitar a atualização, correção ou exclusão de seus dados pessoais, entrando em contato pelo e-mail abaixo.</p>
+
+  <h2>6. Dados de Crianças</h2>
+  <p>O aplicativo <strong>não é direcionado a crianças menores de 13 anos</strong> e não coleta intencionalmente dados pessoais de crianças.</p>
+
+  <h2>7. Alterações nesta Política</h2>
+  <p>Esta Política de Privacidade pode ser atualizada periodicamente. Recomendamos que o usuário revise esta página regularmente para se manter informado sobre eventuais mudanças.</p>
+
+  <h2>8. Contato</h2>
+  <p>Em caso de dúvidas, solicitações ou para exercer seus direitos, entre em contato pelo e-mail: <a href="mailto:ivansodre51@gmail.com">ivansodre51@gmail.com</a></p>
+
+  <p style="margin-top:2em; color:#888;">Última atualização: 12 de maio de 2025</p>
 </body>
 </html>
