--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Política de Privacidade - App de Vendas</title>
+  <title>Política de Privacidade - Gestor de Vendas - PDV Completo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -122,7 +122,7 @@
     <p>Esta política pode ser atualizada. Consulte esta página regularmente para estar sempre informado.</p>
 
     <div class="contact">
-      <b>Contato:</b> <a href="mailto:seuemail@dominio.com">seuemail@dominio.com</a>
+      <b>Contato:</b> <a href="mailto:ivansodre51@gmail.com">ivansodre51@gmail.com</a>
     </div>
     <div class="footer">Última atualização: 12 de maio de 2025</div>
   </div>
